syntax = "proto3";

option java_package = "fr.awildelephant.rdbms.rpc.generated";

service RDBMS {

    rpc execute (Query) returns (Result) {
    }
}

message Query {
    string query = 1;
}

message QueryResult {

    message Row {
        repeated Value value = 1;
    }

    enum Type {
        BOOLEAN = 0;
        DATE = 1;
        DECIMAL = 2;
        INTEGER = 3;
        LONG = 4;
        TEXT = 5;
    }

    message Column {
        Type type = 1;
        string name = 2;
        bool nullable = 3;
    }

    repeated Column schema = 1;
    repeated Row rows = 2;
}

message UpdateResult {
    int32 numberOfUpdatedRows = 1;
}

message Result {

    oneof result_types {
        QueryResult query = 1;
        UpdateResult update = 2;
    }
}

// Column types definition

message BooleanValue {
    bool value = 1;
}

message IntegerValue {
    int32 value = 1;
}

message LongValue {
    int64 value = 1;
}

message TextValue {
    string value = 1;
}

message NullValue {

}

message Value {

    oneof possible_types {
        BooleanValue booleanValue = 1;
        IntegerValue integerValue = 2;
        NullValue nullValue = 3;
        TextValue textValue = 4;
        LongValue longValue = 5;
    }
}
